<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ag5300cm.surveyapp.SurveyAppActivation"
    >

    <TextView
        android:id="@+id/show_entered_question"
        android:text="@string/new_question_editText"
        android:textSize="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/buttonOne_tallynumber"
        android:text="@string/enter_ButtonEditTextOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/show_entered_question"/>

    <Button
        android:id="@+id/buttonTwo_tallynumber"
        android:text="@string/enter_ButtonEditTextTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonOne_tallynumber"/>

    <Button
        android:id="@+id/seeResults_button"
        android:text="See_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>



</RelativeLayout>